--- a/style/style.css
+++ b/style/style.css
@@ -287,12 +287,12 @@ body {
 }
 
 /*.arrows-items_link {
-	margin-right: 17px;
-	text-decoration: none;
+    margin-right: 17px;
+    text-decoration: none;
 }
 
 .arrows-items_link:last-child {
-	margin-right: 0px;
+    margin-right: 0px;
 }*/
 
 .slider__dots {
@@ -1409,6 +1409,47 @@ body {
     }
 
     .arrows {
+        left: 0%;
+        margin: 0;
+        position: absolute;
+        top: 73%;
+    }
+
+    .arrow {
+        z-index: 100;
+        position: absolute;
+        display: inline-block;
+        background-color: #E3B873;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+    }
+
+    .arrow-left {
+        background-image: url(../img/mobile-slider_left.png);
+        left: 6px;
+        top: calc(50% - 16px);
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+
+    .arrow-left span {
+        display: none;
+    }
+
+    .arrow-rigth {
+        background-image: url(../img/mobile-slider_rigth.png);
+        top: calc(50% - 16px);
+        background-position: center center;
+        background-repeat: no-repeat;
+        margin-left: 303px;
+    }
+
+    .arrow-rigth span {
+        display: none;
+    }
+
+    .slider__dots {
         display: none;
     }
 
@@ -1633,11 +1674,10 @@ body {
     }
 
     .solutions__title {
-        margin-bottom: 27px;
         font-size: 22px;
         width: 340px;
         text-align: center;
-        margin-left: 0px;
+        margin: 0 auto 27px;
     }
 
     .musk {
@@ -1740,6 +1780,11 @@ body {
 }
 
 @media (max-width: 380px) {
+
+    .arrow-rigth {
+        margin-left: 271px;
+    }
+
     .container {
         min-width: 0px;
         padding: 0px 11px;
@@ -1782,7 +1827,7 @@ body {
     }
 
     .slider_text__p {
-        margin-bottom: 5%;
+        /*        margin-bottom: 5%;*/
         word-wrap: break-word;
         width: 100%;
     }
@@ -1883,6 +1928,7 @@ body {
     }
 
     .mobile-slider {
+        height: auto;
         width: 100%;
         top: calc(50% - 16px);
     }
